--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,66 @@ body {
   background-image: url(/images/145063639-abstract-vignette-green-chalkboard-use-as-a-background.webp);
   background-repeat: no-repeat;
   background-size: cover;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  background-attachment: fixed;
 }
 
-#dealer-cards img{
+
+
+#button-container {
   height: 175px;
   width: 125px;
-  margin: 1px;
+  position: absolute;
+  display: flex;
+  margin: auto;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+
 }
-#player-cards img{
+
+#player-cards{
   height: 175px;
   width: 125px;
   margin: 1px;
+  position: absolute;
+  display: flex;
+  margin: auto;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+#player-hand {
+  position: absolute;
+  display: flex;
+  margin: auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  right: 47%;
+  top: 47%;
+  float: none;
+}
+
+#dealer-hand {
+  position: absolute;
+  display: flex;
+  margin: auto;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  right: 47%;
+  top: 20%;
 }
 
 #hit {
@@ -22,47 +71,188 @@ body {
   width: 100px;
   font-size: 20px;
   border-radius: 8px;
+  position: absolute;
+  display: flex;
+  margin: auto;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  right: 50%;
+  top: 65%;
 }
+
 #stay {
   height: 50px;
   width: 100px;
   font-size: 20px;
   border-radius: 8px;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  right: 43%;
+  top: 65%;
 }
+
+#deal {
+  height: 50px;
+  width: 100px;
+  font-size: 20px;
+  border-radius: 8px;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  right: 57%;
+  top: 65%;
+}
+
+#player-container{
+  margin: auto;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  flex: 1;
+  flex-basis: 100%;
+  height: 1200px;
+  width: 50%;
+  right: 50%;
+  top: 50%;
+}
+.cash-bet{
+  margin: auto;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+  right: 1.5%;
+  top: 50%;
+}
+
+#winning{
+  margin: 10px;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+  right: 10px;
+  top: 38%;
+}
+
+#player-container{
+  margin: auto;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  flex: 1;
+  flex-basis: 100%;
+  height: 1200px;
+  width: 50%;
+  right: 25%;
+  top: 70%;
+}
+
+#bet-buttons-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#bet-buttons{
+  margin: auto;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  flex: 1;
+  flex-basis: 100%;
+  height: 100px;
+  width: 50%;
+  right: 25%;
+  top: 75%;
+}
+
+
 #bet5 {
   height: 100px;
   width: 100px;
   font-size: 20px;
   border-radius: 50%;
   background-color: rgb(234, 176, 16);
+  position: absolute;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: block;
+  flex-basis: 100%;
+  right: 65%;
 }
+
 #bet10 {
   height: 100px;
   width: 100px;
   font-size: 20px;
   border-radius: 50%;
   background-color: blue;
+  position: absolute;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: block;
+  flex-basis: 100%;
+  right: 50%;
+  
 }
+
 #bet25 {
   height: 100px;
   width: 100px;
   font-size: 20px;
   border-radius: 50%;
   background-color: #b02328;
+  position: absolute;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: block;
+  flex-basis: 100%;
+  right: 35%;
 }
-#deal {
-  height: 50px;
-  width: 100px;
-  font-size: 20px;
-  border-radius: 8px;
+
+#player {
+  right: %;
+  top: 20%;
 }
-#bet-buttons{
-  padding: 10px;
-  margin: px;
-}
+
 
 #bet {
   margin: 30px;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 #reset {
@@ -72,11 +262,25 @@ body {
   border-radius: 8px;
   background-color: #ec333a;
   color: white;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  right: 30%;
+  top: 65%;
 }
 
 #reset:hover{
   background-color: black;
   color: #ec333a;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 
