--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
-  background-image: url(/images/145063639-abstract-vignette-green-chalkboard-use-as-a-background.webp);
+  background-image: url(/images/poker-casino-chips-border-background-2021-08-26-16-37-12-utc.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   margin: auto;
