--- a/css/style.css
+++ b/css/style.css
@@ -141,17 +141,34 @@ body {
 }
 
 #winning{
+  align-items: center;
   margin: 10px;
   position: absolute;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  text-align: center;
-  width: 50%;
-  right: 10px;
+  right: 48.5%;
   top: 38%;
 }
+
+#deale{
+  align-items: center;
+  margin: 10px;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+ 
+  right: 50%;
+  top: 10%;
+}
+
+#message{
+  text-align: center;
+}
+
 
 #player-container{
   margin: auto;
@@ -282,48 +299,3 @@ body {
   justify-content: center;
   align-items: center;
 }
-
-
-
-/* body {
-    background-color: #696969;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 50vmax;
-  } */
-  
-  .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .player-hand {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /* .card {
-    margin: 3vh;
-  } */
-  
-  /* .card.outline {
-    border: 0.15em dashed #000000;
-  } */
-  
-    /* .card.shadow {
-    box-shadow: 7px 7px 7px 0 rgba(41, 41, 41, 0.95) !important;
-  } */ 
-  
-  .deal {
-    margin-top: 3vh;
-    color: white;
-    background-color: #b02328;
-    font-weight: bold;
-    border: 2px solid #000000;
-  }
