Fix some of the css

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   text-align: center;
-  background-image: url(/images/poker-casino-chips-border-background-2021-08-26-16-37-12-utc.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: green;
   margin: auto;
   display: flex;
   flex-direction: row;
@@ -40,28 +38,43 @@ body {
 }
 
 #player-hand {
-  position: absolute;
   display: flex;
-  margin: auto;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
-  right: 47%;
-  top: 47%;
-  float: none;
+  justify-content: center;
+  text-align: center;
+  margin: 10px;
+  position: absolute;
+  left: 50%;
+  top: 55%;
+  transform: translate(-50%, -50%);
 }
 
 #dealer-hand {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: 10px;
+  position: absolute;
+  left: 50%;
+  top: 25%;
+  transform: translate(-50%, -50%);
+}
+
+#dhs-container{
   position: absolute;
   display: flex;
-  margin: auto;
   flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  right: 47%;
-  top: 20%;
+  text-align: center;
+  flex: 1;
+  flex-basis: 100%;
+  height: 100px;
+  width: 50%;
+  right: 25%;
+  top: 75%;
+  gap: 10px;
 }
 
 #hit {
@@ -125,54 +138,50 @@ body {
   right: 50%;
   top: 50%;
 }
+
 #cash-bet{
-  margin: auto;
-  position: absolute;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
+  justify-content: center;
   text-align: center;
-  right: 29.5%;
+  margin: 10px;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #winning{
+  display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   margin: 10px;
   position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  text-align: center;
-  align-items: center;
-  right: 48.5%;
-  top: 38%;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
 }
 
 #title {
-  font-size: 19px;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  text-align: center;
   margin: 10px;
   position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  right: 44%;
-  top: 5%;
+  left: 50%;
+  top: 4%;
+  transform: translate(-50%, -50%);
 }
 
 .cash-bet{
-  align-items: center;
-  margin: 10px;
   position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  right: 29%;
-  top: 56%;
+  top: 77%;
+  right: 15%;
+  transform: translate(0, -50%);
 }
 
 #message{
@@ -196,18 +205,14 @@ body {
 }
 
 #bet-buttons-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  margin: 10px;
 }
 
 #bet-buttons{
-  margin: auto;
   position: absolute;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
   text-align: center;
   flex: 1;
@@ -216,53 +221,42 @@ body {
   width: 50%;
   right: 25%;
   top: 75%;
+  gap: 10px;
 }
+
 
 
 #bet5 {
   height: 100px;
   width: 100px;
-  font-size: 20px;
+  font-size: 35px;
   border-radius: 50%;
-  background-color: rgb(234, 176, 16);
-  position: absolute;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  background-color: rgb(255, 255, 126);
   justify-content: center;
-  align-items: block;
-  flex-basis: 100%;
-  right: 65%;
+  align-items: center;
+  margin: auto;
 }
 
 #bet10 {
   height: 100px;
   width: 100px;
-  font-size: 20px;
+  font-size: 35px;
   border-radius: 50%;
-  background-color: blue;
-  position: absolute;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  background-color: rgb(130, 130, 248);
   justify-content: center;
-  align-items: block;
-  flex-basis: 100%;
-  right: 50%;
-  
+  align-items: center;
+  margin: auto;
 }
 
 #bet25 {
   height: 100px;
   width: 100px;
-  font-size: 20px;
+  font-size: 35px;
   border-radius: 50%;
-  background-color: #b02328;
-  position: absolute;
-  flex-direction: row;
-  flex-wrap: nowrap;
+  background-color: #ff5258;
   justify-content: center;
-  align-items: block;
-  flex-basis: 100%;
-  right: 35%;
+  align-items: center;
+  margin: auto;
 }
 
 #player {
@@ -282,25 +276,27 @@ body {
 }
 
 #reset {
+  background-color: #ed050d;
+  color: white;
+  border-radius: 8px;
+  font-size: 20px;
   height: 50px;
   width: 150px;
-  font-size: 20px;
-  border-radius: 8px;
-  background-color: #ec333a;
-  color: white;
-  position: absolute;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
   align-items: center;
-  right: 30%;
-  top: 65%;
+  justify-content: center;
+  text-align: center;
+  margin: 10px;
+  position: absolute;
+  left: 80%;
+  top: 85%;
+  transform: translate(-50%, -50%);
 }
+
 
 #reset:hover{
   background-color: black;
-  color: #ec333a;
+  color: #fc4b4b;
   position: absolute;
   display: flex;
   flex-direction: row;
