--- a/css/style.css
+++ b/css/style.css
@@ -67,60 +67,40 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  text-align: center;
   flex: 1;
   flex-basis: 100%;
   height: 100px;
-  width: 50%;
-  right: 25%;
-  top: 75%;
+  width: 300px;
   gap: 10px;
+  top: 65%;
 }
 
+
 #hit {
+  flex: 1;
+  flex-basis: 100%;
   height: 50px;
-  width: 100px;
+  width: 120px;
   font-size: 20px;
   border-radius: 8px;
-  position: absolute;
-  display: flex;
-  margin: auto;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  right: 50%;
-  top: 65%;
 }
 
 #stay {
+  flex: 1;
+  flex-basis: 100%;
   height: 50px;
   width: 100px;
   font-size: 20px;
   border-radius: 8px;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  right: 43%;
-  top: 65%;
 }
 
 #deal {
+  flex: 1;
+  flex-basis: 100%;
   height: 50px;
   width: 100px;
   font-size: 20px;
   border-radius: 8px;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  right: 57%;
-  top: 65%;
 }
 
 #player-container{
@@ -179,9 +159,17 @@ body {
 
 .cash-bet{
   position: absolute;
-  top: 77%;
-  right: 15%;
-  transform: translate(0, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  flex-basis: 100%;
+  height: 100px;
+  width: 300px;
+  gap: 10px;
+  top: 70%;
+  right: 10%;
 }
 
 #message{
@@ -282,25 +270,5 @@ body {
   font-size: 20px;
   height: 50px;
   width: 150px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  margin: 10px;
-  position: absolute;
-  left: 80%;
-  top: 85%;
-  transform: translate(-50%, -50%);
 }
 
-
-#reset:hover{
-  background-color: black;
-  color: #fc4b4b;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-}
