--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,20 @@ body {
   transform: translate(-50%, -50%);
 }
 
+#dhsb{
+  margin: auto;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  flex-basis: 100%;
+  width: 400px;
+  height: 200px;
+  top: 65%;
+}
+
 #dhs-container{
   position: absolute;
   display: flex;
@@ -72,7 +86,7 @@ body {
   height: 100px;
   width: 300px;
   gap: 10px;
-  top: 65%;
+  top: 5%;
 }
 
 
@@ -128,9 +142,7 @@ body {
   position: absolute;
   width: 200px;
   height: 200px;
-  left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
 }
 
 #winning{
@@ -207,9 +219,8 @@ body {
   flex-basis: 100%;
   height: 100px;
   width: 50%;
-  right: 25%;
-  top: 75%;
   gap: 10px;
+  top: 60%;
 }
 
 
