--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ body {
 }
 
 #reset {
-  background-color: #ed050d;
+  background-color: #970106;
   color: white;
   border-radius: 8px;
   font-size: 20px;
